k8s/applications/business/chatwoot/service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chatwoot
  namespace: chatwoot
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - support.smadja.dev
  rules:
    - backendRefs:
        - name: chatwoot
          port: 3000
